--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
 		<div class="task-item">
             <h4>Assignment10</h4>
-            <a href="https://jssg33.github.io/usc242/assignments/10-javascript-arrays/index.html"><img src="./images/TBD.png" alt="Assignment10"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/10-arrays/index.html"><img src="./images/arrays10.png" alt="Assignment10"></a>
             <h5>Javascript Arrays</h5>
             <h6>Simple Javascript Array Excercises</h6>
         </div>
