--- a/assignments/10-arrays/index.html
+++ b/assignments/10-arrays/index.html
@@ -9,6 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <title>USC242 HomePage</title>
+    <link rel="stylesheet" href="./css/a9styles.css"> 
     <link rel="stylesheet" href="./css/a10styles.css"> 
     <script src="./js/a10.js" defer></script>
 
