--- a/assignments/10-arrays/index.html
+++ b/assignments/10-arrays/index.html
@@ -11,6 +11,7 @@
     <title>USC242 HomePage</title>
     <link rel="stylesheet" href="./css/a9styles.css"> 
     <link rel="stylesheet" href="./css/a10styles.css"> 
+     <script src="./js/musiclist.js" defer></script>
     <script src="./js/a10.js" defer></script>
 
 <style>
