--- a/assignments/10-arrays/index.html
+++ b/assignments/10-arrays/index.html
@@ -106,27 +106,23 @@ object-fit: cover; /* Maintain aspect ratio */
         </select>
     </div>
 
-    <h2 id="mood-title"></h2>
-
-    <!-- SONG LIST (hidden until mood selected) -->
-    <div id="song-list"></div>
 
    
 <div class="container">
 <div class="column-1">
-<img src="./images/image1.jpg" alt="Image 1">
-<ol class="happy"><li id="happy1">Song1</li><li id="happy2">Song2</li></ol>
-
+<img src="./images/youtube.png" alt="Image 1">    
+    <h2 id="mood-title"></h2>
+    <div id="song-list"></div>
+</div>
 </div>
 <div class="column-2">
 <img src="./images/image2.jpg" alt="Image 2">
-<ol class="sad"><li id="sad1">Song1</li><li id="sad2">Song2</li></ol>
-</div>
-</div>
-    <!-- VIDEO PLAYER (hidden until song selected) -->
-    <div id="video-container">
+   <div id="video-container">
         <iframe id="video-frame" width="560" height="315" frameborder="0" allowfullscreen></iframe>
-    </div> 
+   </div> 
+</div>
+</div>
+
 </section>
 
 <footer>
