--- a/assignments/10-arrays/index.html
+++ b/assignments/10-arrays/index.html
@@ -15,7 +15,6 @@
     <script src="./js/a10.js" defer></script>
 
 <style>
-/* Optional inline styles for layout */
 #mood-select {
     margin: 20px 0;
 }
@@ -53,22 +52,26 @@ height: 100vh; /* Full viewport height */
 gap: 10px; /* Optional spacing between columns */
 }
 
-.column-1 img {
-width: 100%;
-height: 100%; /* Fill the column */
-object-fit: cover; /* Maintain aspect ratio */
+* {
+  box-sizing: border-box;
 }
 
-.column-2 {
-display: grid;
-grid-template-rows: repeat(2, 1fr); /* Two equal rows */
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
 }
 
-.column-2 img {
-width: 100%;
-height: 100%; /* Fill each row */
-object-fit: cover; /* Maintain aspect ratio */
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
+</style>
+
 </style>
 
 </head>
@@ -93,36 +96,31 @@ object-fit: cover; /* Maintain aspect ratio */
     <p>Arrays</p>
 </header>
 
-<section class="assign10">
-
+<section class="assign9">
+<div class="row">
+  <div class="column" style="background-color:#aaa;">
+    <h2>Music Selector</h2>
+        <img src="./images/youtube.png" alt="Image 1">    
     <h2>Select a Mood</h2>
-
-    <!-- DROPDOWN MENU -->
-    <div id="mood-select">
+      <div id="mood-select">
         <select id="mood-dropdown" onchange="showSongsFromDropdown()">
             <option value="">-- Choose a Mood --</option>
             <option value="happy">Happy</option>
             <option value="sad">Sad</option>
         </select>
     </div>
-
-
-   
-<div class="container">
-<div class="column-1">
-<img src="./images/youtube.png" alt="Image 1">    
     <h2 id="mood-title"></h2>
     <div id="song-list"></div>
-</div>
-</div>
-<div class="column-2">
-<img src="./images/image2.jpg" alt="Image 2">
+</di
+  </div>
+  <div class="column" style="background-color:#bbb;">
+    <h2>Music Player</h2>
    <div id="video-container">
         <iframe id="video-frame" width="560" height="315" frameborder="0" allowfullscreen></iframe>
    </div> 
+  </div>
 </div>
-</div>
-
+    
 </section>
 
 <footer>
