--- a/assignments/10-arrays/index.html
+++ b/assignments/10-arrays/index.html
@@ -100,7 +100,7 @@ gap: 10px; /* Optional spacing between columns */
 <div class="row">
   <div class="column" style="background-color:#aaa;">
     <h2>Music Selector</h2>
-        <img src="./images/youtube.png" alt="Image 1">    
+        <div align="center"><img src="./images/youtube.png" alt="Image 1" width="200px" height="200px"></center>    
     <h2>Select a Mood</h2>
       <div id="mood-select">
         <select id="mood-dropdown" onchange="showSongsFromDropdown()">
