--- a/assignments/10-arrays/index.html
+++ b/assignments/10-arrays/index.html
@@ -70,6 +70,16 @@ gap: 10px; /* Optional spacing between columns */
   display: table;
   clear: both;
 }
+
+.pagecontainer
+{
+height: 1000px;
+min-height: 1000px;
+max-height: auto;
+max-width: 1600px;
+margin: 0 auto;
+position: relative;
+}
 </style>
 
 </style>
