--- a/assignments/10-arrays/index.html
+++ b/assignments/10-arrays/index.html
@@ -111,7 +111,7 @@ font-size: 12pt;
 <div class="row">
   <div class="column" style="background-color:#aaa;">
     <h2>Music Selector</h2>
-        <div align="center"><img src="./images/youtube.png" alt="Image 1" width="200px" height="200px"></center>    
+        <div align="center"><img src="./images/youtube.png" alt="Image 1" width="200px" height="200px"></center></div>    
     <h2>Select a Mood</h2>
       <div id="mood-select">
         <select id="mood-dropdown" onchange="showSongsFromDropdown()">
@@ -130,8 +130,6 @@ font-size: 12pt;
    </div> 
   </div>
   </div>
-  
-
     
 </section>
 
