--- a/assignments/10-arrays/index.html
+++ b/assignments/10-arrays/index.html
@@ -62,6 +62,8 @@ gap: 10px; /* Optional spacing between columns */
   width: 50%;
   padding: 10px;
   height: 300px; /* Should be removed. Only for demonstration */
+  text-align: center;
+  vertical-align: middle;
 }
 
 /* Clear floats after the columns */
@@ -80,6 +82,7 @@ max-width: 1600px;
 margin: 0 auto;
 position: relative;
 font-size: 12pt;
+text-align: center;
 }
 </style>
 
