--- a/assignments/10-arrays/index.html
+++ b/assignments/10-arrays/index.html
@@ -61,7 +61,7 @@ gap: 10px; /* Optional spacing between columns */
   float: left;
   width: 50%;
   padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
+  height: 700px; 
   text-align: center;
   vertical-align: middle;
 }
