--- a/assignments/10-arrays/index.html
+++ b/assignments/10-arrays/index.html
@@ -84,6 +84,15 @@ position: relative;
 font-size: 12pt;
 text-align: center;
 }
+footer
+{
+max-width: 1600px;
+margin: 0 auto;
+}
+body
+{
+background-color: black;
+}
 </style>
 
 </style>
