--- a/assignments/10-arrays/index.html
+++ b/assignments/10-arrays/index.html
@@ -93,6 +93,14 @@ body
 {
 background-color: black;
 }
+iframe
+{
+min-width: 90%;
+max-width: 750px;
+margin: 0 auto;
+max-height: 500px;
+height: 500px;
+}
 </style>
 
 </style>
