--- a/assignments/10-arrays/index.html
+++ b/assignments/10-arrays/index.html
@@ -57,7 +57,15 @@ gap: 10px; /* Optional spacing between columns */
 }
 
 /* Create two equal columns that floats next to each other */
-.column {
+.column11 {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 700px; 
+  text-align: center;
+  vertical-align: middle;
+}
+.column12 {
   float: left;
   width: 50%;
   padding: 10px;
@@ -66,6 +74,7 @@ gap: 10px; /* Optional spacing between columns */
   vertical-align: middle;
 }
 
+    
 /* Clear floats after the columns */
 .row:after {
   content: "";
@@ -95,7 +104,8 @@ background-color: scarlet;
 }
 iframe
 {
-min-width: 90%;
+width: 90%;
+min-width: 450px;
 max-width: 750px;
 margin: 0 auto;
 max-height: 500px;
@@ -129,7 +139,7 @@ height: 500px;
 
 <section class="assign10">
 <div class="row">
-  <div class="column" style="background-color:#aaa;">
+  <div class="column11" style="background-color:#aaa;">
     <h2>Music Selector</h2>
         <div align="center"><img src="./images/youtube.png" alt="Image 1" width="200px" height="200px"></center></div>    
     <h2>Select a Mood</h2>
@@ -143,7 +153,7 @@ height: 500px;
     <h2 id="mood-title"></h2>
     <div id="song-list"></div>
   </div>
-    <div class="column" style="background-color:#bbb;">
+    <div class="column12" style="background-color:#bbb;">
     <h2>Music Player</h2>
    <div id="video-container">
         <iframe id="video-frame" width="560" height="315" frameborder="0" allowfullscreen></iframe>
