--- a/assignments/10-arrays/index.html
+++ b/assignments/10-arrays/index.html
@@ -26,7 +26,7 @@
     <div id="mobilemenu"> 
        <div id="mobilemenu-header">
            <span id="SiteMenu" style="font-size: 11pt;">
-               <a href="lab8v2.html" target="_blank">LegacyAnimation</a>
+               <a href="https://www.sc.edu" target="_blank" style="color: red;">Visit South Carolina</a>
            </span>
            <span id="navright" style="float: right; vertical-align: top; font-size: 11pt;">
                <a href="../../index.html">Site Home</a>
