--- a/assignments/10-arrays/index.html
+++ b/assignments/10-arrays/index.html
@@ -26,9 +26,9 @@
     <div id="mobilemenu"> 
        <div id="mobilemenu-header">
            <span id="SiteMenu" style="font-size: 11pt;">
-               <a href="https://www.sc.edu" target="_blank" style="color: red;">Visit South Carolina</a>
+               <a href="https://www.sc.edu" target="_blank" style="color: white; a:visited: white;">Visit South Carolina</a>
            </span>
-           <span id="navright" style="float: right; vertical-align: top; font-size: 11pt;">
+           <span id="navright" style="float: right; vertical-align: top; font-size: 11pt; a:visited: white;">
                <a href="../../index.html">Site Home</a>
            </span>
        </div>
