--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -131,6 +131,10 @@ button { vertical-align: middle; text-align: center; color: white; background-co
   background: #000;      /* optional: prevents white flash */
 }
 
+a
+{
+font-size: 11pt;
+}
 	
 </style>
 
@@ -688,6 +692,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
