--- a/project/part5/index.html
+++ b/project/part5/index.html
@@ -131,7 +131,14 @@ button { vertical-align: middle; text-align: center; color: white; background-co
   background: #000;      /* optional: prevents white flash */
 }
 
-	
+a
+{
+font-size: 9pt;
+}
+li
+{
+font-size: 10pt;
+}
 </style>
 
 </head>
