--- a/project/homepage/book555.html
+++ b/project/homepage/book555.html
@@ -21,20 +21,23 @@
   <div class="navbar">
     <div class="nav-left">
       <div class="dropdown">
-        <button class="jsmenu"><img src="./images/jsmenu4.png"></button> 
+        <button class="jsmenu"><img src="./images/greenmenu5.png"></button> 
         <div class="dropdown-content">
-            <a href="login.html">Login</a>
+           	<a href="index.html">Home</a>
+			      <a href="login.html">Login</a>
             <a href="logout.html">Logout</a>
             <a href="welcome.html">Welcome</a>
             <a href="licenses6.html">BuyNow</a>
-            <a href="products.html">AdminProducts</a>
-            <a href="licensetypes.html">LicenseTypes</a>
-            <a href="mylicenselogs.html">LicenseLogs</a>
-            <a href="mylicenses.html">MyLicenses</a>
-            <a href="testimonials.html">MyLicenses</a>
-            <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
-            <a href="help.html">Help</a>
+            <a href="mylicenselogs.html">MyLicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="./pricing/wizard.html">PricingWizard</a>
+            <a href="mycart.html?uid=1">MyCart</a>
+            <a href="myprofile.html">MyProfile</a>
+            <a href="testimonials.html">AdminTestimonials</a>
+            <a href="products.html">AdminProducts</a>
+            <a href="licensetypes.html">AdminLicenseTypes</a>
+	   <a href="template.html">AdminPageTemplate</a>
         </div>
        <div class="logo">&nbsp;&nbsp;MyLinkv25 - Review Parks</div>
       </div>
@@ -204,6 +207,7 @@
 </body>
 <footer class="footer"> &copy; Greenville Associates Consulting, Inc. <br> All rights reserved.<br>  <span align="center"><a href="sitemap.html" class="sitelink">SiteMap</a></span></footer>
 </html>
+
 
 
 
