--- a/project/homepage/cartcancel.html
+++ b/project/homepage/cartcancel.html
@@ -44,7 +44,7 @@ width: 400px;
   <div class="navbar">
     <div class="nav-left">
       <div class="dropdown">
-        <button class="jsmenu"><img src="./images/jsmenu4.png" width="100%" height="350px"></button> 
+        <button class="jsmenu"><img src="./images/greenmenu5.png" width="100%" height="350px"></button> 
         <div class="dropdown-content">
             	<a href="index.html">Home</a>
 			      <a href="login.html">Login</a>
