--- a/project/homepage/licensesreview6.html
+++ b/project/homepage/licensesreview6.html
@@ -26,17 +26,26 @@
   <div class="navbar">
     <div class="nav-left">
       <div class="dropdown">
-        <button class="jsmenu"><img src="./images/jsmenu4.png"></button> 
+        <button class="jsmenu"><img src="./images/greenmenu5.png"></button> 
         <div class="dropdown-content">
-                  <a href="index.html">Site Home</a>
-                  <a href="cartreview.html">MyCart</a>
-                  <a href="parks5.html">Review Park Options</a>
-                  <a href="reviews5.html">Park Reviews</a>
-                  <a href="mybookings5.html">MyReservations</a>
-                  <a href="manager.html">Manager Utilities</a>
+                  	<a href="index.html">Home</a>
+			<a href="login.html">Login</a>
+            <a href="logout.html">Logout</a>
+            <a href="welcome.html">Welcome</a>
+            <a href="licenses6.html">BuyNow</a>
+            <a href="reviews.html">AllReviews</a>
+            <a href="mylicenselogs.html">MyLicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="./pricing/wizard.html">PricingWizard</a>
+            <a href="mycart.html?uid=1">MyCart</a>
+            <a href="myprofile.html">MyProfile</a>
+            <a href="testimonials.html">AdminTestimonials</a>
+            <a href="products.html">AdminProducts</a>
+            <a href="licensetypes.html">AdminLicenseTypes</a>
+	   <a href="template.html">AdminPageTemplate</a>
         </div>
       </div> 
-      <div class="logo" align="left">&nbsp&nbsp<H5>MyLinkV25 - Park Review Home</H5></div>  
+      <div class="logo" align="left">&nbsp&nbsp<H5>GEM.LM - Product Review Home</H5></div>  
     </div>
       <div class="nav-right">
         <img src="./images/bluecircle.png" id="profilephototarget" alt="User" style="cursor:pointer;" onclick="window.location.href='profile.html'" />
