--- a/project/homepage/reviews5.html
+++ b/project/homepage/reviews5.html
@@ -25,19 +25,23 @@
   <div class="navbar">
     <div class="nav-left">
       <div class="dropdown">
-        <button class="jsmenu"><img src="./images/jsmenu4.png" alt="Menu"></button>
+        <button class="jsmenu"><img src="./images/greenmenu5.png" alt="Menu"></button>
         <div class="dropdown-content">
-             <a href="login.html">Login</a>
+            	<a href="index.html">Home</a>
+			      <a href="login.html">Login</a>
             <a href="logout.html">Logout</a>
             <a href="welcome.html">Welcome</a>
             <a href="licenses6.html">BuyNow</a>
-            <a href="products.html">ProductAdministrator</a>
-            <a href="licensetypes.html">LicenseTypes</a>
-            <a href="mylicenselogs.html">LicenseLogs</a>
-            <a href="mylicenses.html">MyLicenses</a>
-            <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
-            <a href="help.html">Help</a>
+            <a href="mylicenselogs.html">MyLicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="./pricing/wizard.html">PricingWizard</a>
+            <a href="mycart.html?uid=1">MyCart</a>
+            <a href="myprofile.html">MyProfile</a>
+            <a href="testimonials.html">AdminTestimonials</a>
+            <a href="products.html">AdminProducts</a>
+            <a href="licensetypes.html">AdminLicenseTypes</a>
+	   <a href="template.html">AdminPageTemplate</a>
         </div>
       </div>
       <div class="logo">&nbsp;&nbsp;&nbsp;<h5 class="mb-0">MyLinkv25 - ParkReviews</h5></div>
