--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -131,6 +131,10 @@ document.getElementById("loginForm").addEventListener("submit", async (e) => {
             localStorage.setItem("userId", user._id);
             localStorage.setItem("email", user.email);
             localStorage.setItem("loggedInUser", JSON.stringify(user));
+			localStorage.setItem("uid", users.uid);
+			localStorage.setItem("jid", users.uid);
+			localStorage.setItem("username", users.username);
+			localStorage.setItem("role", users.role);
             window.location.href = "mylicenses.html";
         } else {
             errorBox.textContent = "Invalid username or password.";
