--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -18,10 +18,10 @@
 <body onload="checkpll(); checkUserStatus(); displayProfilePicture();">
 <div class="container2">
 
-<!-- TOP NAV -->
-<div class="topnav">
-    <div class="dropdown">
-        <button class="dropbtn">Menu ▼</button>
+  <div class="navbar">
+    <div class="nav-left">
+      <div class="dropdown">
+        <button class="jsmenu"><img src="./images/greenmenu5.png"></button> 
         <div class="dropdown-content">
             <a href="login.html">Login</a>
             <a href="logout.html">Logout</a>
