--- a/project/homepage/fusioncommerce/payments8.html
+++ b/project/homepage/fusioncommerce/payments8.html
@@ -45,7 +45,7 @@
 	   <a href="template.html">AdminPageTemplate</a>
         </div>
       </div> 
-    <div class="logo">&nbsp&nbsp<H5>MyLinkv25 - Review Parks</H5></div>
+    <div class="logo">&nbsp&nbsp<H5>GEM.LM - Review Parks</H5></div>
     </div>
     <div class="nav-right">
       <img src="./images/bluecircle.png" id="profilephototarget" alt="User" style="cursor:pointer;" onclick="window.location.href='profile.html'" />
