--- a/project/homepage/fusioncommerce/reviewpayment5.html
+++ b/project/homepage/fusioncommerce/reviewpayment5.html
@@ -92,7 +92,7 @@ width: 400px;
 	   <a href="template.html">AdminPageTemplate</a>
             </div>
     </div> 
-      <div class="logo">&nbsp&nbsp&nbsp<H5>MyLinkv25</H5></div>
+      <div class="logo">&nbsp&nbsp&nbsp<H5>GEM.LM</H5></div>
       </div>
       <div class="nav-right">
         <img src="./images/bluecircle.png" id="profilephototarget" alt="User" style="cursor:pointer;" onclick="window.location.href='profile.html'" />
