--- a/project/homepage/fusioncommerce/reviews5.html
+++ b/project/homepage/fusioncommerce/reviews5.html
@@ -44,7 +44,7 @@
 	   <a href="template.html">AdminPageTemplate</a>
         </div>
       </div>
-      <div class="logo">&nbsp;&nbsp;&nbsp;<h5 class="mb-0">MyLinkv25 - ParkReviews</h5></div>
+      <div class="logo">&nbsp;&nbsp;&nbsp;<h5 class="mb-0">GEM.LM - ParkReviews</h5></div>
     </div>
     <div class="nav-right">
       <img src="./images/bluecircle.png" id="profilephototarget" alt="User" style="cursor:pointer;" onclick="window.location.href='profile.html'" />
