--- a/project/homepage/fusioncommerce/book555.html
+++ b/project/homepage/fusioncommerce/book555.html
@@ -5,15 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script type="module" src="https://esm.run/@material/web/all.js"></script>
-  <link rel="stylesheet" href="./css/login.css" />
-  <link rel="stylesheet" href="./css/dropmenu.css" />
-  <link rel="stylesheet" href="./css/cart.css" />
-  <link rel="stylesheet" href="./css/site.css" />
-  <link rel="stylesheet" href="./css/layout.css" />
-  <link rel="stylesheet" href="./css/greenville.css" />
+  <link rel="stylesheet" href="./css/fusioncart.css" />
   <script src="./js/licenses.js"></script>
   <script src="./js/cart.js"></script>
-  <title>Mountain Bike Parks</title>
+  <title>Fusion Commerce Cart V1.1</title>
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
@@ -42,11 +37,11 @@
             <a href="licensetypes.html">AdminLicenseTypes</a>
 	   <a href="template.html">AdminPageTemplate</a>
         </div>
-       <div class="logo">&nbsp;&nbsp;GEM.LM - Review Parks</div>
+       <div class="logo">&nbsp;&nbsp;GEM.LM - Review Products</div>
       </div>
     </div>
     <div class="nav-right">
-      <img src="./images/bluecircle.png" id="profilephototarget" alt="User" style="cursor:pointer;" onclick="window.location.href='profile.html'" />
+      <img src="./images/blackcircle.png" id="profilephototarget" alt="User" style="cursor:pointer;" onclick="window.location.href='../myprofile.html'" />
       <span id="H3UserBanner"></span>
       <a href="login.html" id="loginBtn" class="btn secondary-btn" onclick="loginUser(event)">Login</a>
       <a href="login.html" id="logoutBtn" class="btn secondary-btn" onclick="logoutUser(event)">Logout</a>
