--- a/project/homepage/fusioncommerce/book555.html
+++ b/project/homepage/fusioncommerce/book555.html
@@ -57,7 +57,7 @@
      <h3>ParkInfo</h3>
      <hr>
      <div style="display: flex; align-items: center; gap: 10px;">
-  <span><strong>Current Park ID:</strong> <span id="currentParkId"></span><span id="currentParkName"></span></span>&nbsp&nbsp&nbsp&nbsp
+  <span><strong>Current Product ID:</strong> <span id="currentParkId"></span><span id="currentParkName"></span></span>&nbsp&nbsp&nbsp&nbsp
 &nbsp&nbsp
   <label for="parkSelector">Change Park:</label>
   <select id="parkSelector" onchange="changePark()" 
