--- a/project/homepage/fusioncommerce/book555.html
+++ b/project/homepage/fusioncommerce/book555.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="nav-right">
-      <img src="./images/blackcircle.png" id="profilephototarget" alt="User" onclick="window.location.href='myprofile.html'" />
+      <img src="./images/blackcircle.png" id="profilephototarget" alt="User" onclick="window.location.href='../myprofile.html'" />
       <span id="H3UserBanner"></span>
       <a href="login.html" id="loginBtn" class="btn secondary-btn">Login</a>
       <a href="logout.html" id="logoutBtn" class="btn secondary-btn">Logout</a>
