--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -186,7 +186,7 @@ $(document).ready(function () {
                                     <p><strong>Record ID:</strong> ${p._id || '—'}</p>
 
                                     <div class="mt-3">
-                                        <a href="book555.html?ProductId=${p.SKEWID || ''}" 
+                                        <a href="./fusioncommerce/purchase555.html?tenantId=GACOM&SKUID=${p.SKEWID || ''}" 
                                            class="btn btn-success btn-sm mb-2">
                                             Buy Product
                                         </a><br>
