--- a/project/homepage/fusioncommerce/cartcancel.html
+++ b/project/homepage/fusioncommerce/cartcancel.html
@@ -6,14 +6,12 @@
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script type="module" src="https://esm.run/@material/web/all.js"></script>
  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
- <link rel="stylesheet" href="./css/site.css">
- <link rel="stylesheet" href="./css/layout.css">
- <link rel="stylesheet" href="./css/greenville.css">
-<script src="./js/bikes.js"></script>
-  <title>Cancel Reservation</title>
-
-  <!-- jQuery -->
+  <link rel="stylesheet" href="./css/fusioncart.css" />
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <!-- Your new JS files -->
+  <script src="./js/products.js"></script>
+  <script src="./js/cart.js"></script>
+  <title>Cancel Reservation</title>
 
 <style>
 
