--- a/project/homepage/fusioncommerce/cartdetail.html
+++ b/project/homepage/fusioncommerce/cartdetail.html
@@ -47,14 +47,21 @@
     <div class="dropdown">
       <button class="jsmenu"><img src="./images/greenmenu5.png"></button>
       <div class="dropdown-content">
-        <a href="index.html">Home</a>
-        <a href="login.html">Login</a>
-        <a href="logout.html">Logout</a>
-        <a href="welcome.html">Welcome</a>
-        <a href="products.html">Products</a>
-        <a href="purchase555.html">Buy Now</a>
-        <a href="cartreview.html">My Carts</a>
-        <a href="myprofile.html">My Profile</a>
+            <a href="index.html">Home</a>
+			      <a href="login.html">Login</a>
+            <a href="logout.html">Logout</a>
+            <a href="welcome.html">Welcome</a>
+            <a href="licenses6.html">BuyNow</a>
+            <a href="reviews.html">AllReviews</a>
+            <a href="mylicenselogs.html">MyLicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="./pricing/wizard.html">PricingWizard</a>
+            <a href="mycart.html?uid=1">MyCart</a>
+            <a href="myprofile.html">MyProfile</a>
+            <a href="testimonials.html">AdminTestimonials</a>
+            <a href="products.html">AdminProducts</a>
+            <a href="licensetypes.html">AdminLicenseTypes</a>
+	          <a href="template.html">AdminPageTemplate</a>
       </div>
       <div class="logo">&nbsp;&nbsp;FusionCommerce – Cart Detail</div>
     </div>
