--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -6,6 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script type="module" src="https://esm.run/@material/web/all.js"></script>
+<link rel="stylesheet" href="./css/dropmenu.css">
+<link rel="stylesheet" href="./css/login.css">
 <link rel="stylesheet" href="./css/site.css">
 <link rel="stylesheet" href="./css/layout.css">
 <link rel="stylesheet" href="./css/greenville.css">
