--- a/project/homepage/fusioncommerce/cartcancel.html
+++ b/project/homepage/fusioncommerce/cartcancel.html
@@ -18,10 +18,11 @@
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
-  <!-- FusionCommerce Styles -->
-  <link rel="stylesheet" href="./css/site.css">
-  <link rel="stylesheet" href="./css/layout.css">
-  <link rel="stylesheet" href="./css/greenville.css">
+  <link rel="stylesheet" href="./css/fusioncart.css" />
+  <!-- Your new JS files -->
+  <script src="./js/products.js"></script>
+  <script src="./js/cart.js"></script>
+
 
   <style>
     /* Kelly Green Theme */
