--- a/project/homepage/fusioncommerce/cartmaster.html
+++ b/project/homepage/fusioncommerce/cartmaster.html
@@ -9,12 +9,11 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script type="module" src="https://esm.run/@material/web/all.js"></script>
 
-<link rel="stylesheet" href="./css/site.css">
-<link rel="stylesheet" href="./css/layout.css">
-<link rel="stylesheet" href="./css/greenville.css">
-
-<script src="./js/cart.js"></script>
+<link rel="stylesheet" href="./css/fusioncart.css" />
+<!-- Your new JS files -->
 <script src="./js/products.js"></script>
+<script src="./js/cart.js"></script>
+
 
 <title>FusionCommerce – CartMaster Summary</title>
 
