--- a/project/homepage/fusioncommerce/cartreview.html
+++ b/project/homepage/fusioncommerce/cartreview.html
@@ -8,10 +8,11 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script type="module" src="https://esm.run/@material/web/all.js"></script> 
-<link rel="stylesheet" href="fusioncart.css" />
-
-<script src="./js/cart.js"></script>
+<link rel="stylesheet" href="./css/fusioncart.css" />
+<!-- Your new JS files -->
 <script src="./js/products.js"></script>
+<script src="./js/cart.js"></script>
+
 
 <title>Your Cart</title>
 
