--- a/project/homepage/fusioncommerce/myinvoices.html
+++ b/project/homepage/fusioncommerce/myinvoices.html
@@ -16,11 +16,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
   <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
+  <link rel="stylesheet" href="./css/fusioncart.css" />
+  <!-- Your new JS files -->
+  <script src="./js/products.js"></script>
+  <script src="./js/cart.js"></script>
 
-  <!-- FusionCommerce Styles -->
-  <link rel="stylesheet" href="./css/site.css">
-  <link rel="stylesheet" href="./css/layout.css">
-  <link rel="stylesheet" href="./css/greenville.css">
 
   <style>
     #banner {
