--- a/project/homepage/fusioncommerce/reviewpayment5.html
+++ b/project/homepage/fusioncommerce/reviewpayment5.html
@@ -6,9 +6,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script type="module" src="https://esm.run/@material/web/all.js"></script>
-  <link rel="stylesheet" href="./css/site.css">
-  <link rel="stylesheet" href="./css/layout.css">
-  <link rel="stylesheet" href="./css/greenville.css">
+   <!-- Bootstrap CSS -->
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+   <!-- jQuery -->
+   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+ 
 <script src="./js/bikes.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>  
   <title>ReviewPayment</title>
