--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -40,7 +40,7 @@
             <a href="help.html">Help</a>
         </div>
     </div>
-
+    </div>
     <div class="right-links" style="display:flex; gap:6px; align-items:center; color: white;">
         <md-text-button class="icon-only" href="index.html" aria-label="Home" title="Home">
             <span class="material-icons" style="color:white;">home</span>
