--- a/project/homepage/fusioncommerce/payments8.html
+++ b/project/homepage/fusioncommerce/payments8.html
@@ -11,6 +11,9 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
   <link rel="stylesheet" href="./css/fusioncart.css" />
+  <!-- Your new JS files -->
+  <script src="./js/products.js"></script>
+  <script src="./js/cart.js"></script>
 
   <style>
     /* NEW FIX: Keep menu button + FusionCommerce name on same line */
