--- a/project/homepage/fusioncommerce/paynow2.html
+++ b/project/homepage/fusioncommerce/paynow2.html
@@ -37,6 +37,11 @@
       font-weight: 600;
       color: white;
     }
+
+    .top-section 
+    { 
+      min-height: 800px; 
+    }
   </style>
 </head>
 <body onload="checkpll(); checkUserStatus(); displayProfilePicture();">
