--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -395,6 +395,7 @@ font-size: 10pt;
                 <span>Modules: Accounting, HR, Forms, Mobile</span>
             </div>
         </div><BR><BR>
+		</div>
 		<div id="griddata" class="griddata">
         <div align="center"><span align="center"><img src="./images/fusionpro25.png" width="150px" height="150px"></span><BR>
 			<BR><h4>FusionShellPro V5.01 Current Releases</h4></div><BR>
@@ -432,7 +433,7 @@ font-size: 10pt;
             </div>
         </div>
     </div>
-</section>
+
 <BR><BR>
   <!-- Slider below -->
 
@@ -581,7 +582,7 @@ font-size: 10pt;
     <br><br>
 </div>
 
-
+</section>
 <section class="middle-columns" style="background-color: lightgrey;">
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
@@ -692,6 +693,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
