--- a/project/homepage/licensing/licensing.html
+++ b/project/homepage/licensing/licensing.html
@@ -116,15 +116,65 @@
     <h2>Enterprise Licensing Options</h2>
     <p>Greenville Associates offers flexible enterprise licensing models designed to support organizations of all sizes and structures.</p>
 
-    <div class="products">
-        <div class="product-card"><h3>(1) Utility Hours</h3><p>Pay only for compute usage.</p></div>
-        <div class="product-card"><h3>(2) Named Users</h3><p>Licenses assigned per user.</p></div>
-        <div class="product-card"><h3>(3) Simultaneous Users</h3><p>Flexible user‑count licensing.</p></div>
-        <div class="product-card"><h3>(4) Business Unit Licenses</h3><p>Licensing per division.</p></div>
-        <div class="product-card"><h3>(5) Enterprise‑Wide</h3><p>Unlimited usage across the organization.</p></div>
-        <div class="product-card"><h3>(6) Site Licenses</h3><p>Unlimited licenses for a single site.</p></div>
+    <div class="ideas">
+
+        <!-- Utility Hours -->
+        <div class="idea left">
+            <div class="idea-text">
+                <h3>Utility Hours</h3>
+                <p>Pay only for compute usage with metered billing ideal for elastic workloads.</p>
+            </div>
+            <img src="./images/license-utility.jpg" alt="Utility Hours">
+        </div>
+
+        <!-- Named Users -->
+        <div class="idea right">
+            <div class="idea-text">
+                <h3>Named Users</h3>
+                <p>Licenses assigned per individual user. Perfect for predictable staffing models.</p>
+            </div>
+            <img src="./images/license-named.jpg" alt="Named Users">
+        </div>
+
+        <!-- Simultaneous Users -->
+        <div class="idea left">
+            <div class="idea-text">
+                <h3>Simultaneous Users</h3>
+                <p>Flexible licensing based on concurrent usage rather than total headcount.</p>
+            </div>
+            <img src="./images/license-simultaneous.jpg" alt="Simultaneous Users">
+        </div>
+
+        <!-- Business Unit License -->
+        <div class="idea right">
+            <div class="idea-text">
+                <h3>Business Unit License</h3>
+                <p>License an entire division or department with unlimited internal usage.</p>
+            </div>
+            <img src="./images/license-bu.jpg" alt="Business Unit License">
+        </div>
+
+        <!-- Enterprise-Wide -->
+        <div class="idea left">
+            <div class="idea-text">
+                <h3>Enterprise‑Wide</h3>
+                <p>Unlimited usage across the entire organization with centralized governance.</p>
+            </div>
+            <img src="./images/license-enterprise.jpg" alt="Enterprise Wide">
+        </div>
+
+        <!-- Site License -->
+        <div class="idea right">
+            <div class="idea-text">
+                <h3>Site License</h3>
+                <p>Unlimited usage for a single physical location or campus.</p>
+            </div>
+            <img src="./images/license-site.jpg" alt="Site License">
+        </div>
+
     </div>
 </section>
+
 
 <!-- EMPHASIS BLOCK -->
 <section class="emphasis">
