--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -583,6 +583,8 @@ font-size: 10pt;
 </div>
 
 </section>
+<div class="bottom-sections">
+	
 <section class="middle-columns" style="background-color: lightgrey;">
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
@@ -628,6 +630,7 @@ font-size: 10pt;
 <footer>
     © 2026 Greenville Associates Enterprise Software. All rights reserved.
 </footer>
+</div>
 </div>
 <script type="module">
   import { createTheme } from "https://cdn.jsdelivr.net/npm/@mui/material@latest/+esm";
@@ -693,6 +696,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
