--- a/project/homepage/licensetypes.html
+++ b/project/homepage/licensetypes.html
@@ -135,6 +135,14 @@ a
 {
 font-size: 10pt;
 }
+
+css
+.top-section .container-fluid {
+    width: 100% !important;
+    max-width: 100% !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+}
 	
 </style>
 
