--- a/project/homepage/licensetypes.html
+++ b/project/homepage/licensetypes.html
@@ -148,7 +148,7 @@ css
 
 </head>
 <body>
-<div class="container2">
+<div class="container2" style="margin: 0 auto;">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
