--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -90,21 +90,14 @@
 .tab-content { width: 100%; } 
 .tab-pane { width: 100%; height: 700px; }
  .top-section {
-    width: 100vw;
-    position: relative;
-    left: 50%;
-    right: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
-    padding-left: 0;
-    padding-right: 0;
+	 width: 90%;
 }
    
 </style>
 </head>
 
 <body>
-<div class="container2">
+<div class="container2" style="margin: 0 auto;">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
