--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
         </div>
     </div>
 		<div class="task-item">
-            <h4>Assignment12</h4>
+            <h4>Assignment13</h4>
             <a href="https://jssg33.github.io/usc242/statusreports/DESIGNDOCUMENT3.0.pdf"><img src="./images/templateviewtop.png" alt="Assignment12"></a>
-            <h5>Amended DesignSpecs</h5>
+            <h5>Amended DesignSpecs Final</h5>
             <h6>Design Document3.0</h6>
         </div>
     </div>
