Updating Interior Nav Pages

--- a/project/homepage/pricing/wizard.html
+++ b/project/homepage/pricing/wizard.html
@@ -95,7 +95,7 @@
         <li><a href="licenses6.html">Products</a></li>
 
         <li class="dropdown">
-            <a href="#deployment">Deployment ▾</a>
+            <a href="./deployments/deployments.html">Deployment ▾</a>
             <ul class="dropdown-content">
                 <li><a href="#onprem">On‑Premise</a></li>
                 <li><a href="#cloud">Cloud</a></li>
@@ -104,7 +104,7 @@
         </li>
 
         <li class="dropdown">
-            <a href="#licensing">Licensing ▾</a>
+            <a href="./licensing/licensing.html">Licensing ▾</a>
             <ul class="dropdown-content">
                 <li><a href="#utility">Utility Hours</a></li>
                 <li><a href="#namedusers">Named Users</a></li>
@@ -115,13 +115,13 @@
 
         <!-- ⭐ NEW PRICING MENU -->
         <li class="dropdown">
-            <a href="#pricing">Pricing ▾</a>
+            <a href="./pricing/pricing.html">Pricing ▾</a>
             <ul class="dropdown-content">
-                <li><a href="#pricing">All Licenses</a></li>
-                <li><a href="#pricing-enterprise">Enterprise</a></li>
-                <li><a href="#pricing-cloud">Cloud</a></li>
-                <li><a href="#pricing-onprem">On‑Premise</a></li>
-                <li><a href="#pricing-utility">Utility Model</a></li>
+                <li><a href="./pricing/pricing.html">All Licenses</a></li>
+                <li><a href="./pricing/pricing.html-enterprise">Enterprise</a></li>
+                <li><a href="./pricing/pricing.html-cloud">Cloud</a></li>
+                <li><a href="./pricing/pricing.html-onprem">On‑Premise</a></li>
+                <li><a href="./pricing/pricing.html-utility">Utility Model</a></li>
             </ul>
         </li>
 
