--- a/project/homepage/licensetypes.html
+++ b/project/homepage/licensetypes.html
@@ -212,7 +212,7 @@ css
         <li><a href="licenses6.html">Products</a></li>
 
         <li class="dropdown">
-            <a href="#deployment">Deployment ▾</a>
+            <a href="./deployments/deployments.html">Deployment ▾</a>
             <ul class="dropdown-content">
                 <li><a href="#onprem">On‑Premise</a></li>
                 <li><a href="#cloud">Cloud</a></li>
@@ -221,7 +221,7 @@ css
         </li>
 
         <li class="dropdown">
-            <a href="#licensing">Licensing ▾</a>
+            <a href="./licensing/licensing.html">Licensing ▾</a>
             <ul class="dropdown-content">
                 <li><a href="#utility">Utility Hours</a></li>
                 <li><a href="#namedusers">Named Users</a></li>
@@ -232,14 +232,14 @@ css
 
         <!-- ⭐ NEW PRICING MENU -->
         <li class="dropdown">
-            <a href="#pricing">Pricing ▾</a>
+            <a href="./pricing/pricing.html">Pricing ▾</a>
             <ul class="dropdown-content">
-                <li><a href="#pricing">All Licenses</a></li>
+                <li><a href="./pricing/pricing.html">All Licenses</a></li>
                 <li><a href="./pricing/wizard.html">Wizard</a></li>
-                <li><a href="#pricing-enterprise">Enterprise</a></li>
-                <li><a href="#pricing-cloud">Cloud</a></li>
-                <li><a href="#pricing-onprem">On‑Premise</a></li>
-                <li><a href="#pricing-utility">Utility Model</a></li>
+                <li><a href="./pricing/pricing.html-enterprise">Enterprise</a></li>
+                <li><a href="./pricing/pricing.html-cloud">Cloud</a></li>
+                <li><a href="./pricing/pricing.html-onprem">On‑Premise</a></li>
+                <li><a href="./pricing/pricing.html-utility">Utility Model</a></li>
             </ul>
         </li>
 
