--- a/project/homepage/licensing/licensing.html
+++ b/project/homepage/licensing/licensing.html
@@ -72,7 +72,7 @@
         <li><a href="licenses6.html">Products</a></li>
 
         <li class="dropdown">
-            <a href="#deployment">Deployment ▾</a>
+            <a href="./deployments/deployments.html">Deployment ▾</a>
             <ul class="dropdown-content">
                 <li><a href="#onprem">On‑Premise</a></li>
                 <li><a href="#cloud">Cloud</a></li>
@@ -81,7 +81,7 @@
         </li>
 
         <li class="dropdown">
-            <a href="#licensing">Licensing ▾</a>
+            <a href="./licensing/licensing.html">Licensing ▾</a>
             <ul class="dropdown-content">
                 <li><a href="#utility">Utility Hours</a></li>
                 <li><a href="#namedusers">Named Users</a></li>
@@ -95,10 +95,10 @@
             <ul class="dropdown-content">
                 <li><a href="pricing.html">All Licenses</a></li>
                 <li><a href="./pricing/wizard.html">Wizard</a></li>
-                <li><a href="pricing.html#pricing-enterprise">Enterprise</a></li>
-                <li><a href="pricing.html#pricing-cloud">Cloud</a></li>
-                <li><a href="pricing.html#pricing-onprem">On‑Premise</a></li>
-                <li><a href="pricing.html#pricing-utility">Utility Model</a></li>
+                <li><a href="pricing.html./pricing/pricing.html-enterprise">Enterprise</a></li>
+                <li><a href="pricing.html./pricing/pricing.html-cloud">Cloud</a></li>
+                <li><a href="pricing.html./pricing/pricing.html-onprem">On‑Premise</a></li>
+                <li><a href="pricing.html./pricing/pricing.html-utility">Utility Model</a></li>
             </ul>
         </li>
 
