--- a/project/homepage/pricing.html
+++ b/project/homepage/pricing.html
@@ -72,7 +72,7 @@
         <li><a href="licenses6.html">Products</a></li>
 
         <li class="dropdown">
-            <a href="#deployment">Deployment ▾</a>
+            <a href="./deployments/deployments.html">Deployment ▾</a>
             <ul class="dropdown-content">
                 <li><a href="#onprem">On‑Premise</a></li>
                 <li><a href="#cloud">Cloud</a></li>
@@ -91,12 +91,12 @@
         </li>
 
         <li class="dropdown">
-            <a href="#pricing">Pricing ▾</a>
+            <a href="./pricing/pricing.html">Pricing ▾</a>
             <ul class="dropdown-content">
-                <li><a href="#pricing-enterprise">Enterprise</a></li>
-                <li><a href="#pricing-cloud">Cloud</a></li>
-                <li><a href="#pricing-onprem">On‑Premise</a></li>
-                <li><a href="#pricing-utility">Utility Model</a></li>
+                <li><a href="./pricing/pricing.html-enterprise">Enterprise</a></li>
+                <li><a href="./pricing/pricing.html-cloud">Cloud</a></li>
+                <li><a href="./pricing/pricing.html-onprem">On‑Premise</a></li>
+                <li><a href="./pricing/pricing.html-utility">Utility Model</a></li>
             </ul>
         </li>
 
