--- a/project/homepage/testimonials.html
+++ b/project/homepage/testimonials.html
@@ -94,7 +94,7 @@
   <ul class="menu">
       <li><a href="licenses6.html">Products</a></li>
       <li class="dropdown">
-          <a href="#deployment">Deployment ▾</a>
+          <a href="./deployments/deployments.html">Deployment ▾</a>
           <ul class="dropdown-content">
               <li><a href="#onprem">On‑Premise</a></li>
               <li><a href="#cloud">Cloud</a></li>
@@ -102,7 +102,7 @@
           </ul>
       </li>
       <li class="dropdown">
-          <a href="#licensing">Licensing ▾</a>
+          <a href="./licensing/licensing.html">Licensing ▾</a>
           <ul class="dropdown-content">
               <li><a href="#utility">Utility Hours</a></li>
               <li><a href="#namedusers">Named Users</a></li>
@@ -111,13 +111,13 @@
           </ul>
       </li>
       <li class="dropdown">
-          <a href="#pricing">Pricing ▾</a>
+          <a href="./pricing/pricing.html">Pricing ▾</a>
           <ul class="dropdown-content">
-              <li><a href="#pricing">All Licenses</a></li>
-              <li><a href="#pricing-enterprise">Enterprise</a></li>
-              <li><a href="#pricing-cloud">Cloud</a></li>
-              <li><a href="#pricing-onprem">On‑Premise</a></li>
-              <li><a href="#pricing-utility">Utility Model</a></li>
+              <li><a href="./pricing/pricing.html">All Licenses</a></li>
+              <li><a href="./pricing/pricing.html-enterprise">Enterprise</a></li>
+              <li><a href="./pricing/pricing.html-cloud">Cloud</a></li>
+              <li><a href="./pricing/pricing.html-onprem">On‑Premise</a></li>
+              <li><a href="./pricing/pricing.html-utility">Utility Model</a></li>
           </ul>
       </li>
       <li><a href="contacts.html">Contact Sales</a></li>
