--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -306,25 +306,25 @@ font-size: 10pt;
 
         <div class="feature-grid">
 
-            <a href="feature1.html" class="feature-card">
+            <a href="https://fusion.greenvilleassociates.com" target="_blank" class="feature-card">
                 <img src="./images/image1.png" width="100px" height="100px" alt="Feature Icon">
                 <h5 style="text-align: center;">FusionBasics</h5>
                 <p>Review Containerized Application Types, Site Licenses, Extranet, Intranet Portal Technologies.</p>
             </a>
 
-            <a href="feature2.html" class="feature-card">
+            <a href="./deployments/deployments.html" class="feature-card">
                 <img src="./images/image2.png" width="100px" height="100px" alt="Feature Icon">
                 <h5 style="text-align: center;">Deployment Options</h5>
                 <p>Review Premise, ILEC, Cloud, Grid and Hybrid Deployment Options.</p>
             </a>
 
-            <a href="feature3.html" class="feature-card">
+            <a href="licensetypes.html" class="feature-card">
                 <img src="./images/image3.png" width="100px" height="100px" alt="Feature Icon">
                 <h5 style="text-align: center;">LicenseTypes</h5>
                 <p>Review License Types, Trial Delivery and Service Options.</p>
             </a>
 
-            <a href="feature4.html" class="feature-card">
+            <a href="./pricing/wizard.html" class="feature-card">
                 <img src="./images/image4.png" width="100px" height="100px" alt="Feature Icon">
                 <h5 style="text-align: center;">Pricing Wizard</h5>
                 <p>Develop Pricing for Utility Usage, Site Licenses, and Cloud/Hybrid Options.</p>
@@ -696,6 +696,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
