--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -338,22 +338,22 @@ font-size: 10pt;
         <h4>Manage</h4><BR>
 		<div class="feature-grid">
     
-				<a href="feature1.html" class="feature-card">
+				<a href="mylicenses.html" class="feature-card">
                 <img src="./images/image1.png" width="100px" height="100px" alt="Feature Icon">
                 <h5 style="text-align: center;">MyLicenses</h5>
                 <p>Manage and secure your personal licenses, and monitor real time stats.</p>
             </a>
-				<a href="feature1.html" class="feature-card">
+				<a href="mylicenselogs.html" class="feature-card">
                 <img src="./images/image1.png" width="100px" height="100px" alt="Feature Icon">
                 <h5 style="text-align: center;">MyLicenseLogs</h5>
                 <p>Manage and review your Usage and Security Profile.</p>
             </a>
-				<a href="feature1.html" class="feature-card">
+				<a href="mylicenses.html" class="feature-card">
                 <img src="./images/image1.png" width="100px" height="100px" alt="Feature Icon">
                 <h5 style="text-align: center;">CorporateLicenses</h5>
                 <p>Manage and Monitor your Enterprise Licenses across the world.</p>
             </a>
-				<a href="feature1.html" class="feature-card">
+				<a href="mylicenselogs.html" class="feature-card">
                 <img src="./images/image1.png" width="100px" height="100px" alt="Feature Icon">
                 <h5 style="text-align: center;">CorporateActions</h5>
                 <p>Manage and Monitor Enterprise Actions, and Security.</p>
@@ -696,6 +696,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
