--- a/project/part5/contacts.html
+++ b/project/part5/contacts.html
@@ -142,7 +142,7 @@
     </div>
     
    
-    <section class="top-section">
+    <section class="top-section" style="width: 90%; height: 600px;">
     <form id="contactForm">
         <div class="mb-3">
             <label>Phone</label>
